--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   # UI Components
   flutter_svg: ^2.0.9
   cached_network_image: ^3.3.0
+  flutter_staggered_grid_view: ^0.7.0
 
   # Utilities
   intl: ^0.19.0
