--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_svg: ^2.0.9
   cached_network_image: ^3.3.0
   flutter_staggered_grid_view: ^0.7.0
+  google_fonts: ^6.1.0
 
   # Utilities
   intl: ^0.19.0
