--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   figma_squircle: ^0.6.3
   google_fonts: ^6.1.0
+  photo_view: ^0.15.0
 
   # Utilities
   intl: ^0.19.0
