--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   camera: ^0.10.5+5
   image_picker: ^1.0.4
   path_provider: ^2.1.1
+  permission_handler: ^11.1.0
 
   # UI Components
   flutter_svg: ^2.0.9
@@ -58,6 +59,11 @@ dependencies:
   intl: ^0.19.0
   uuid: ^4.2.1
   dartz: ^0.10.1
+
+  # Local Storage
+  shared_preferences: ^2.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
