--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   google_fonts: ^6.1.0
   photo_view: ^0.15.0
 
+  # HTTP Client
+  dio: ^5.4.0
+
   # Utilities
   intl: ^0.19.0
   uuid: ^4.2.1
