--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   # HTTP Client
   dio: ^5.4.0
 
+  # WebSocket
+  socket_io_client: ^2.0.3+1
+
   # Utilities
   intl: ^0.19.0
   uuid: ^4.2.1
