--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   figma_squircle: ^0.6.3
   google_fonts: ^6.1.0
   photo_view: ^0.15.0
+  panorama_viewer: ^2.0.7
+  dchs_motion_sensors: ^2.0.1
 
   # HTTP Client
   dio: ^5.4.0
